bpo-45635: standardize error handling in traceback.c